force-app/main/default/objects/COMM_AccountManagementMapping__mdt/COMM_AccountManagementMapping__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to store the Mapping used for the Data that is shown on the Account Information LWC in Community</description>
    <label>Account Management Mapping</label>
    <pluralLabel>Account Management Mappings</pluralLabel>
</CustomObject>