force-app/main/default/objects/COMM_AccountManagementMapping__mdt/fields/COMM_Field__c.field-meta.xml
<CustomField>
    <fullName>COMM_Field__c</fullName>
    <description>Name of the field on the front-end that is mapped to the back-end field</description>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>