force-app/main/default/objects/COMM_AccountManagementMapping__mdt/fields/COMM_IsB2CMapping__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsB2CMapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify that mapping is done in the case client account is B2C</description>
    <label>Is B2C Mapping?</label>
    <type>Checkbox</type>
</CustomField>