force-app/main/default/objects/COMM_AccountManagementMapping__mdt/fields/COMM_SObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>COMM_SObjectApiName__c</fullName>
    <description>The API name of the SObject the data is mapped to on the back-end</description>
    <label>SObject API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>